Fixed horizontal scrolling

--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,10 @@
     box-sizing: border-box;
     font-weight: 400;
     -webkit-tap-highlight-color: transparent;
+    outline: 1px solid red;
+    max-width: 800px;
+    margin: 0 auto;
+
 }
 
 body {
@@ -48,6 +52,8 @@ body {
 
 #allcontent {
     display: none;
+    max-width: 800px;
+    margin: 0 auto;
 }
 
 #default {
@@ -95,6 +101,7 @@ body {
 
 .content {
     padding: 0 5%;
+    max-width: 800px;
 }
 
 h1 {
